--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
         <input id="input" type="text" placeholder="Enter the Expression">
         <div id="buttons">
             <div class="btn-row">
-                <button class="btn" onclick="clearInput()">C</button>
-                <button class="btn" onclick="addChar('%')">%</button>
-                <button class="btn" onclick="backspace()">&#9003;</button>
-                <button class="btn" onclick="addChar('/')">&divide;</button>
+                <button class="grey-btns" onclick="clearInput()">C</button>
+                <button class="grey-btns" onclick="addChar('%')">%</button>
+                <button class="grey-btns" onclick="backspace()">&#9003;</button>
+                <button class="orange-btns" onclick="addChar('/')">&divide;</button>
             </div>
             <div class="btn-row">
                 <button class="btn" onclick="addChar('7')">7</button>
                 <button class="btn" onclick="addChar('8')">8</button>
                 <button class="btn" onclick="addChar('9')">9</button>
-                <button class="btn" onclick="addChar('*')">&times;</button>
+                <button class="orange-btns" onclick="addChar('*')">&times;</button>
             </div>
             <div class="btn-row">
                 <button class="btn" onclick="addChar('4')">4</button>
                 <button class="btn" onclick="addChar('5')">5</button>
                 <button class="btn" onclick="addChar('6')">6</button>
-                <button class="btn" onclick="addChar('+')">&plus;</button>
+                <button class="orange-btns" onclick="addChar('+')">&plus;</button>
             </div>
             <div class="btn-row">
                 <button class="btn" onclick="addChar('1')">1</button>
                 <button class="btn" onclick="addChar('2')">2</button>
                 <button class="btn" onclick="addChar('3')">3</button>
-                <button class="btn" onclick="addChar('-')">&minus;</button>
+                <button class="orange-btns" onclick="addChar('-')">&minus;</button>
             </div>
             <div class="btn-row">
                 <button class="btn" onclick="addChar('0')">0</button>
                 <button class="btn" onclick="addChar('.')">.</button>
                 <button class="btn" onclick="addChar('^')">^</button>
-                <button class="btn" onclick="calculateResult()">=</button>
+                <button class="orange-btns" onclick="calculateResult()">=</button>
             </div>
         </div>
     </div>
